@@ -106,7 +106,6 @@ public class DataUtil {
      */
     static String getCharsetFromContentType(String contentType) {
         if (contentType == null) return null;
-        
         Matcher m = charsetPattern.matcher(contentType);
         if (m.find()) {
             return m.group(1).trim().toUpperCase();
