@@ -95,9 +95,11 @@ public class ParserTest {
     }
 
     @Test public void parsesUnterminatedTextarea() {
+        // don't parse right to end, but break on <p>
         Document doc = Jsoup.parse("<body><p><textarea>one<p>two");
         Element t = doc.select("textarea").first();
-        assertEquals("one<p>two", t.text());
+        assertEquals("one", t.text());
+        assertEquals("two", doc.select("p").get(1).text());
     }
 
     @Test public void parsesUnterminatedOption() {
@@ -547,5 +549,15 @@ public class ParserTest {
         assertEquals("Data</ti", Jsoup.parse("<title>Data</ti").title());
         assertEquals("Data", Jsoup.parse("<title>Data</title>").title());
         assertEquals("Data", Jsoup.parse("<title>Data</title >").title());
+    }
+
+    @Test public void handlesUnclosedTitle() {
+        Document one = Jsoup.parse("<title>One <b>Two <b>Three</TITLE><p>Test</p>"); // has title, so <b> is plain text
+        assertEquals("One <b>Two <b>Three", one.title());
+        assertEquals("Test", one.select("p").first().text());
+
+        Document two = Jsoup.parse("<title>One<b>Two <p>Test</p>"); // no title, so <b> causes </title> breakout
+        assertEquals("One", two.title());
+        assertEquals("<b>Two <p>Test</p></b>", two.body().html());
     }
 }
