@@ -18,6 +18,10 @@ jsoup changelog
    Contributed by Jesse Piascik (piascikj)
    <https://github.com/jhy/jsoup/pull/78>
 
+ * Now handles unclosed <title> tags in document by breaking out of the title at the next start tag, instead of
+   eating up to the end of the document.
+   <https://github.com/jhy/jsoup/issues/82>
+
 *** Release 1.5.2 [2011-02-27]
  * Fixed issue with selector parser where some boolean AND + OR combined queries (e.g. "meta[http-equiv], meta[content]")
    were being parsed incorrectly as OR only queries (e.g. former as "meta, [http-equiv], meta[content]")
